data/usersCode/btbtgb/question1/error.txt
/home/gauravghati/clash2/data/usersCode/btbtgb/question1/code1-0.cpp:1:1: error: ‘tyjtyjtyjrty’ does not name a type
 tyjtyjtyjrty
 ^~~~~~~~~~~~
